<resources>
    <string name="AppFeatureUtils_FEATURE_LAYOUT_MYOPULS_INFOLDER">com.android.launcher.LAYOUT_MYOPPO_INFOLDER</string>
    <string name="BaseOrangeCotaCustomize_WEATHER_WIDGET_CLASS_NAME_4x2">com.coloros.widget.smallweather.OppoWeather</string>
    <string name="BaseOrangeCotaCustomize_WEATHER_WIDGET_CLASS_NAME_4x3">com.coloros.widget.smallweather.OppoWeatherVertical</string>
    <string name="BaseOrangeCotaCustomize_WEATHER_WIDGET_PACKAGE_NAME">com.coloros.alarmclock</string>
    <string name="CardPermissionManager_CARD_AUTHORITY_URI">content://com.coloros.assistantscreen.config</string>
    <string name="CardServiceProxyManager_CLIENT_PROVIDER_AUTHORITY">com.coloros.assistantscreen.client.provider</string>
    <string name="CommonSettingsValueProxy_FOCUS_MODE_PKG">com.coloros.focusmode</string>
    <string name="Constants_Package_Assistant_PACKAGE_NAME">com.coloros.ocrscanner</string>
    <string name="Constants_Package_CLOCK_PACKAGE_NAME">com.coloros.alarmclock</string>
    <string name="Constants_Package_GALLERY_PACKAGE_NAME">com.coloros.gallery3d</string>
    <string name="Constants_Package_Heytap_PACKAGE_NAME">com.heytap.instant.platform</string>
    <string name="Constants_Package_NEW_WEATHER_WIDGET_CLASS_NAME">com.coloros.widget.smallweather.OppoWeather</string>
    <string name="Constants_Package_NEW_WEATHER_WIDGET_INTENT">com.coloros.alarmclock/com.coloros.widget.smallweather.OppoWeather</string>
    <string name="Constants_Package_NEW_WEATHER_WIDGET_MULTI_CLASS_NAME">com.coloros.widget.smallweather.OppoWeatherMultiVertical</string>
    <string name="Constants_Package_NEW_WEATHER_WIDGET_OXYGEN_CLASS_NAME">com.coloros.widget.smallweather.OxygenWeatherSingle</string>
    <string name="Constants_Package_NEW_WEATHER_WIDGET_SINGLE_CLASS_NAME">com.coloros.widget.smallweather.OppoWeatherSingle</string>
    <string name="Constants_Package_Nearme_PACKAGE_NAME">com.nearme.instant.platform</string>
    <string name="Constants_Package_OLD_OPLUS_WEATHER_WIDGET_PACKAGE_NAME">com.coloros.widget.smallweather</string>
    <string name="Constants_Package_OLD_WEATHER_WIDGET_CLASS_NAME">com.coloros.widget.smallweather.OppoWeather</string>
    <string name="Constants_Package_OLD_WEATHER_WIDGET_INTENT">com.coloros.widget.smallweather/com.coloros.widget.smallweather.OppoWeather</string>
    <string name="Constants_Package_OPLUSWEATHER_WEATHER_WIDGET_CLASS_NAME">com.coloros.widget.smallweather.RealmeWeather</string>
    <string name="Constants_Package_OPLUS_BACKUPRESTORE_PACKAGENAME">com.coloros.backuprestore</string>
    <string name="Constants_Package_OPLUS_CAMERA_PACKAGE_NAME">com.oppo.camera</string>
    <string name="Constants_Package_OPLUS_OSHARE_PACKAGE_NAME">com.coloros.oshare</string>
    <string name="Constants_Package_OPLUS_OXYGEN_WEATHER_WIDGET_CLASS_NAME" />
    <string name="Constants_Package_OPLUS_SYSTEMCLONE_PACKAGENAME">com.coloros.systemclone</string>
    <string name="Constants_Package_OPLUS_WEATHER_WIDGET_CLASS_NAME">com.coloros.widget.smallweather.OnePlusWidget</string>
    <string name="Constants_Package_OPLUS_WEATHER_WIDGET_PACKAGE_NAME">com.coloros.alarmclock</string>
    <string name="Constants_Package_OPWIDGET_CLOCK_WIDGET_CLASS_NAME">net.oneplus.widget.appwidget.ClockWidgetProvider</string>
    <string name="Constants_Package_OPWIDGET_PACKAGE_NAME">net.oneplus.widget</string>
    <string name="Constants_Package_OPWIDGET_WEATHER_CLOCK_WIDGET_CLASS_NAME">net.oneplus.widget.appwidget.WeatherClockWidgetProvider</string>
    <string name="Constants_Package_OPWIDGET_WEATHER_WIDGET_CLASS_NAME">net.oneplus.widget.appwidget.WeatherWidgetProvider</string>
    <string name="Constants_Package_PRIVATE_MUSIC_PAGE_NAME">com.oppo.music.MusicPageWidgetProvider</string>
    <string name="Constants_Package_VERTICAL_WEATHER_WIDGET_CLASS_NAME">com.coloros.widget.smallweather.OppoWeatherVertical</string>
    <string name="Constants_Package_WEATHER_PACKAGE_NAME">com.coloros.weather2</string>
    <string name="Cube">Cube</string>
    <string name="CubeEffect">Cube</string>
    <string name="CubeEffectCls">com.android.launcher.effect.agent.CubeEffectAgent</string>
    <string name="CustomLayoutHelper_LAUNCHER_RESOURCES_PACKAGE_LEGACY">com.coloros.launcher.layout</string>
    <string name="Cylinder">Roll</string>
    <string name="CylinderEffect">Roll</string>
    <string name="CylinderEffectCls">com.android.launcher.effect.agent.CylinderEffectAgent</string>
    <string name="Default">Default</string>
    <string name="DockBrowserUtils_OPLUS_BROWSER_PACKAGE_NAME_NEW">com.coloros.browser</string>
    <string name="FeatureOption_FEATURE_LAUNCHER_OVERLAY_GOOGLE_ASSISTANT">oppo.launcher.overlay.google_assistant</string>
    <string name="FeatureOption_FEATURE_LIGHT_WEIGHT_OS">oppo.sys.light.func</string>
    <string name="KillAppWrapper_BACKUPRESTORE_PACKAGE">com.coloros.backuprestore</string>
    <string name="LauncherBackupPlugin_LAUNCHER_OLD50_LAYOUT_XML">launcher_coloros50_layout.xml</string>
    <string name="LauncherSettingsFragment_VALUE_WALLPAPER_SETTING">OPPOLauncher</string>
    <string name="LauncherSharedPrefs_PREF_KEY_LEGACY_BUILD_VERSION">com.oppo.build_version</string>
    <string name="LauncherUpgradeHelper_CLASS_SMALLWEATHER_WEATHER">com.coloros.widget.smallweather.OppoWeather</string>
    <string name="LauncherUpgradeHelper_CLASS_SPEECHASSIST_MAIN">com.oppo.speechassist.Main</string>
    <string name="LauncherUpgradeHelper_CLASS_VIDEO_VIDEOLISTACTIVITY">com.oppo.video.VideoListActivity</string>
    <string name="LauncherUpgradeHelper_CLASS_VIDOE">com.oppo.video</string>
    <string name="LayoutRestoreHelper_WIDGET_CLASSNAME_OP">com.coloros.widget.smallweather.OnePlusWidget</string>
    <string name="LockSettingModel_ACTIVITY_STK_2">com.android.stk.OppoStkLauncherActivity2</string>
    <string name="LockSettingModel_PKG_ONEKEYLOCKSCREEN">com.coloros.onekeylockscreen</string>
    <string name="Normal">Default</string>
    <string name="NormalCls">com.android.launcher.effect.agent.NormalEffectAgent</string>
    <string name="OplusAppFilter_HIDE_APP_AUTHORITY_URI">content://com.oplus.battery.provider.OppoGuardElfRusProvider</string>
    <string name="OplusBaseLoaderTask_THEME_UUID_KEY">persist.sys.oppo.theme_uuid</string>
    <string name="OplusLauncherProvider_OPLUS_WEATHER_WIDGET_CLASS_NAME">com.coloros.widget.smallweather.OnePlusWidget</string>
    <string name="OplusLauncherProvider_OPLUS_WEATHER_WIDGET_PACKAGE_NAME">com.coloros.alarmclock</string>
    <string name="Rotation">Flip</string>
    <string name="RotationEffect">Flip</string>
    <string name="RotationEffectCls">com.android.launcher.effect.agent.RotationEffectAgent</string>
    <string name="Slant">Tilt</string>
    <string name="SlantEffect">Tilt</string>
    <string name="SlideEffect">Classic swipe</string>
    <string name="Stackt">Card</string>
    <string name="add_app_to_launcher">Add new apps to Home screen</string>
    <string name="all_apps">App library</string>
    <string name="app_startup_anim_speed">App animation speed</string>
    <string name="app_startup_anim_speed_tips">Adjust the speed of app startup and closing animations.</string>
    <string name="bottom_recommended_header_title">You might be looking for:</string>
    <string name="breeno_entry_switch_tips_new">Show Breeno on Home screen</string>
    <string name="browser_news_switch_title">Swipe up on Home screen</string>
    <string name="description_leaf">Leaf</string>
    <string name="description_octagon">Octagon</string>
    <string name="description_peculiar">Superellipse</string>
    <string name="description_square">Square</string>
    <string name="description_sticker">Sticker</string>
    <string name="drawer_app_global_search">Global Search</string>
    <string name="drawer_app_global_search_tips_new">In the app drawer, search for apps on this device and online.</string>
    <string name="drawer_default_page_title">Default view</string>
    <string name="drawer_layout">Drawer layout</string>
    <string name="drawer_show_app_name">Show app names</string>
    <string name="expand_apps">Recent apps and suggested apps</string>
    <string name="gesture_navigation_bilateral_sliding">Navigation by Swipe gesture from both sides</string>
    <string name="gesture_navigation_get_it">Got it</string>
    <string name="gesture_navigation_tips_nobrand">Gestures are used for system navigation by default. You can switch to virtual buttons in \"Settings - Convenience tools - Navigation buttons\".</string>
    <string name="global_search">Global Search</string>
    <string name="icon_shape">Shape</string>
    <string name="launcher_bottom_button_tips_new">Home screen search button</string>
    <string name="launcher_dock_bottom_search_entry">Search on Home screen</string>
    <string name="launcher_dock_expand_title">Task bar</string>
    <string name="launcher_double_click_lock_new">Double-tap empty space to lock screen</string>
    <string name="launcher_gesture">Gestures</string>
    <string name="launcher_icon_fallen_title">Icon pull-down gesture</string>
    <string name="launcher_is_compact_arrangement_title">Icon autofill</string>
    <string name="launcher_is_show_indicated_app">Show app suggestions</string>
    <string name="launcher_layout">Layout</string>
    <string name="launcher_locked">Lock layout</string>
    <string name="launcher_locked_description">Lock items on your Home screen to prevent them from being moved or deleted.</string>
    <string name="launcher_mode">Home screen</string>
    <string name="launcher_slide_down">Swipe down on Home screen</string>
    <string name="launcher_vfx">Effects</string>
    <string name="launcher_widget_optimize_switch">Optimize widget appearance</string>
    <string name="material_blur_switch_title">Advanced material</string>
    <string name="normal_color_font_medium">SysFont-Medium</string>
    <string name="oplus_font_medium">sans-serif-medium</string>
    <string name="oplus_font_regular">SysFont-Regular</string>
    <string name="oplus_lock_setting_locked_app">Locked</string>
    <string name="oplus_lock_setting_menory_info_title">Display RAM information</string>
    <string name="oplus_lock_setting_phone_manager_entrance">Clean up storage from recent tasks</string>
    <string name="oplus_lock_setting_title">Recent tasks manager</string>
    <string name="oplus_lock_setting_unlocked_app">Unlocked</string>
    <string name="page_turn_title">Transition animations</string>
    <string name="recent_tasks">Recent tasks</string>
    <string name="recent_tasks_management">Manage apps</string>
    <string name="search_entry_switch_tips_new">Show Search at the bottom</string>
    <string name="show_taskbar_bottom_title">Show task bar in apps</string>
    <string name="slantEffectCls">com.android.launcher.effect.agent.SlantEffectAgent</string>
    <string name="stackEffectCls">com.android.launcher.effect.agent.StackEffectAgent</string>
    <string name="taskbar_show_type">Task bar style</string>
    <string name="taskbar_showing_content">Items in task bar</string>
    <string name="taskbar_subscribe_breeno">Breeno</string>
    <string name="taskbar_subscribe_file_bag">Recent files</string>
    <string name="tog_title_layout">Home screen layout</string>
    <string name="tog_title_layout_summary">Set Home screen app layouts.</string>
    <string name="toggle_bar_title_effect">Transitions</string>
    <string name="toggle_bar_title_icons">Icons</string>
    <string name="toggle_bar_title_layout">Layout</string>
    <string name="toggle_bar_title_settings">More</string>
    <string name="toggle_bar_title_wallpaper">Wallpapers</string>
    <string name="toggle_bar_title_widget">Widgets</string>
    <string name="view_tag_leaf">Leaf</string>
    <string name="view_tag_octagon">Octagon</string>
    <string name="view_tag_peculiar">Peculiar</string>
    <string name="view_tag_sticker">Sticker</string>
</resources>