<?xml version="1.0" encoding="utf-8"?>
<effcets
  xmlns:launcher="http://schemas.android.com/apk/res-auto">
    <effect launcher:clsName="@string/NormalCls" launcher:name="@string/Default" launcher:previewThumb="@drawable/ic_toggle_bar_default_effect_thumbnail" />
    <effect launcher:clsName="@string/CylinderEffectCls" launcher:name="@string/Cylinder" launcher:previewThumb="@drawable/ic_toggle_bar_cylinder_effect_thumbnail" />
    <effect launcher:clsName="@string/CubeEffectCls" launcher:name="@string/Cube" launcher:previewThumb="@drawable/ic_toggle_bar_cube_effect_thumbnail" />
    <effect launcher:clsName="@string/RotationEffectCls" launcher:name="@string/Rotation" launcher:previewThumb="@drawable/ic_toggle_bar_rotation_effect_thumbnail" />
    <effect launcher:clsName="@string/stackEffectCls" launcher:name="@string/Stackt" launcher:previewThumb="@drawable/ic_toggle_bar_stack_effect_thumbnail" />
    <effect launcher:clsName="@string/slantEffectCls" launcher:name="@string/Slant" launcher:previewThumb="@drawable/ic_toggle_bar_slant_effect_thumbnail" />
</effcets>
