<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/slidslip_page_title_text_size" android:textColor="@android:color/white" android:gravity="center" android:id="@id/page_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/gesture_navigation_bilateral_sliding" android:layout_below="@id/close_text" android:fontFamily="@string/normal_color_font_medium" android:layout_marginStart="@dimen/slidslip_page_message_margin" android:layout_marginEnd="@dimen/slidslip_page_message_margin" />
    <TextView android:textSize="@dimen/slidslip_page_message_text_size" android:textColor="@android:color/white" android:gravity="center" android:id="@id/page_guide_explain" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/slidslip_page_message_margin_top" android:text="@string/gesture_navigation_tips_nobrand" android:fontFamily="@string/oplus_font_regular" android:layout_marginStart="@dimen/slidslip_page_message_margin" android:layout_marginEnd="@dimen/slidslip_page_message_margin" />
    <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginTop="@dimen/slidslip_guide_view_content_margin_top" android:layout_weight="1.0">
        <ImageView android:id="@id/page_guide_view" android:layout_width="@dimen/slidslip_guide_view_width" android:layout_height="@dimen/slidslip_guide_view_height" android:scaleType="fitXY" android:layout_centerInParent="true" />
    </LinearLayout>
    <Button android:textSize="@dimen/guide_action_ok_text_size" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/action_ok" android:background="@drawable/guide_button_bg_selector" android:layout_width="@dimen/guide_action_ok_width" android:layout_height="@dimen/guide_action_ok_height" android:layout_marginTop="@dimen/guide_action_ok_margin_top" android:layout_marginBottom="@dimen/guide_action_ok_margin_bottom" android:text="@string/gesture_navigation_get_it" android:fontFamily="@string/oplus_font_medium" />
</LinearLayout>
