<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_custom_shape" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ux_custom_shape_layout_margin_top"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="@color/ux_txt_black" android:ellipsize="end" android:layout_gravity="start" android:id="@id/shape_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/ux_custom_shape_text_bottom_margin" android:text="@string/icon_shape" android:singleLine="true" android:fontFamily="sans-serif-medium" />
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:id="@id/layout_custom_shape_container" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="-2.0dp" android:layout_marginEnd="-2.0dp">
        <com.oplus.uxicon.ui.ui.UxSquareShapeView android:id="@id/shape_custom_square" android:layout_width="@dimen/shape_background_size" android:layout_height="@dimen/shape_background_size" android:contentDescription="@string/description_square" app:foreground_drawable="@drawable/ux_custom_square" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/shape_designed_octagon" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.oplus.uxicon.ui.ui.UxShapeView android:id="@id/shape_designed_round" android:visibility="gone" android:layout_width="@dimen/shape_background_size" android:layout_height="@dimen/shape_background_size" android:contentDescription="@string/description_octagon" app:foreground="@drawable/ux_custom_square" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/shape_designed_octagon" app:layout_constraintStart_toEndOf="@id/shape_custom_square" app:layout_constraintTop_toTopOf="parent" app:view_tag="round" />
        <com.oplus.uxicon.ui.ui.UxShapeView android:id="@id/shape_designed_octagon" android:layout_width="@dimen/shape_background_size" android:layout_height="@dimen/shape_background_size" android:contentDescription="@string/description_octagon" app:foreground="@drawable/ux_designed_octagon" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/shape_designed_leaf" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/shape_custom_square" app:layout_constraintTop_toTopOf="parent" app:view_tag="@string/view_tag_octagon" />
        <com.oplus.uxicon.ui.ui.UxShapeView android:id="@id/shape_designed_leaf" android:layout_width="@dimen/shape_background_size" android:layout_height="@dimen/shape_background_size" android:contentDescription="@string/description_leaf" app:foreground="@drawable/ux_designed_leaf" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/shape_designed_sticker" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/shape_designed_octagon" app:layout_constraintTop_toTopOf="parent" app:view_tag="@string/view_tag_leaf" />
        <com.oplus.uxicon.ui.ui.UxShapeView android:id="@id/shape_designed_sticker" android:layout_width="@dimen/shape_background_size" android:layout_height="@dimen/shape_background_size" android:contentDescription="@string/description_sticker" app:foreground="@drawable/ux_designed_sticker" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/shape_designed_peculiar" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/shape_designed_leaf" app:layout_constraintTop_toTopOf="parent" app:view_tag="@string/view_tag_sticker" />
        <com.oplus.uxicon.ui.ui.UxShapeView android:id="@id/shape_designed_peculiar" android:layout_width="@dimen/shape_background_size" android:layout_height="@dimen/shape_background_size" android:contentDescription="@string/description_peculiar" app:foreground="@drawable/ux_designed_peculiar" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/shape_designed_sticker" app:layout_constraintTop_toTopOf="parent" app:view_tag="@string/view_tag_peculiar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:background="@color/ux_oplus_preference_divider" android:layout_width="match_parent" android:layout_height="0.33000004dp" android:layout_marginTop="16.0dp" android:layout_marginHorizontal="@dimen/ux_panel_margin_horizontal" android:forceDarkAllowed="false" />
</LinearLayout>
